generated-in/imnodes/dcimnodes.h

typedef struct ImNodesStyle_t ImNodesStyle;
#define ImNodes ImNodes
typedef int ImNodesCol;              // -> enum ImNodesCol_
typedef int ImNodesStyleVar;         // -> enum ImNodesStyleVar_
typedef int ImNodesAttributeFlags;   // -> enum ImNodesAttributeFlags_
typedef int ImNodesMiniMapLocation;  // -> enum ImNodesMiniMapLocation_
struct ImNodesStyle_t
{
    float             GridSpacing;

    float             NodeCornerRounding;
    ImVec2            NodePadding;
    float             NodeBorderThickness;

    float             LinkThickness;
    float             LinkLineSegmentsPerLength;
    float             LinkHoverDistance;

    // The following variables control the look and behavior of the pins. The default size of each
    // pin shape is balanced to occupy approximately the same surface area on the screen.

    // The circle radius used when the pin shape is either ImNodesPinShape_Circle or
    // ImNodesPinShape_CircleFilled.
    float             PinCircleRadius;
    // The quad side length used when the shape is either ImNodesPinShape_Quad or
    // ImNodesPinShape_QuadFilled.
    float             PinQuadSideLength;
    // The equilateral triangle side length used when the pin shape is either
    // ImNodesPinShape_Triangle or ImNodesPinShape_TriangleFilled.
    float             PinTriangleSideLength;
    // The thickness of the line used when the pin shape is not filled.
    float             PinLineThickness;
    // The radius from the pin's center position inside of which it is detected as being hovered
    // over.
    float             PinHoverRadius;
    // Offsets the pins' positions from the edge of the node to the outside of the node.
    float             PinOffset;

    // Mini-map padding size between mini-map edge and mini-map content.
    ImVec2            MiniMapPadding;
    // Mini-map offset from the screen side.
    ImVec2            MiniMapOffset;

    // By default, ImNodesStyleFlags_NodeOutline and ImNodesStyleFlags_Gridlines are enabled.
    ImNodesStyleFlags Flags;
    // Set these mid-frame using Push/PopColorStyle. You can index this color array with with a
    // ImNodesCol value.
    unsigned int      Colors[ImNodesCol_COUNT];
};
typedef struct ImGuiContext_t ImGuiContext;
typedef struct ImVec2_t ImVec2;
typedef struct ImNodesContext_t ImNodesContext;
// An editor context corresponds to a set of nodes in a single workspace (created with a single
// Begin/EndNodeEditor pair)
//
// By default, the library creates an editor context behind the scenes, so using any of the imnodes
// functions doesn't require you to explicitly create a context.
typedef struct ImNodesEditorContext_t ImNodesEditorContext;
typedef void (*ImNodesMiniMapNodeHoveringCallback)(int, void*);
typedef void* ImNodesMiniMapNodeHoveringCallbackUserData;
// Call this function if you are compiling imnodes in to a dll, separate from ImGui. Calling this
// function sets the GImGui global variable, which is not shared across dll boundaries.
CIMGUI_API void ImNodesSetImGuiContext(ImGuiContext* ctx);
CIMGUI_API void            ImNodesSetCurrentContext(ImNodesContext* ctx);
// Returns the global style struct. See the struct declaration for default values.
CIMGUI_API ImNodesStyle* ImNodesGetStyle(void);
CIMGUI_API void          ImNodesStyleColorsDarkEx(ImNodesStyle* dest /* = NULL */);     // on by default
CIMGUI_API void          ImNodesStyleColorsClassicEx(ImNodesStyle* dest /* = NULL */);
CIMGUI_API void          ImNodesStyleColorsLightEx(ImNodesStyle* dest /* = NULL */);
CIMGUI_API void ImNodesMiniMapEx(const float minimap_size_fraction /* = 0.2f */, const ImNodesMiniMapLocation location /* = ImNodesMiniMapLocation_TopLeft */, const ImNodesMiniMapNodeHoveringCallback node_hovering_callback /* = NULL */, const ImNodesMiniMapNodeHoveringCallbackUserData node_hovering_callback_data /* = NULL */);
// Use PushColorStyle and PopColorStyle to modify ImNodesStyle::Colors mid-frame.
CIMGUI_API void ImNodesPushColorStyle(ImNodesCol item, unsigned int color);
CIMGUI_API void ImNodesPopColorStyle(void);
CIMGUI_API void ImNodesPushStyleVar(ImNodesStyleVar style_item, float value);
CIMGUI_API void ImNodesPopStyleVarEx(int count /* = 1 */);
// Push a single AttributeFlags value. By default, only AttributeFlags_None is set.
CIMGUI_API void ImNodesPushAttributeFlag(ImNodesAttributeFlags flag);
CIMGUI_API void ImNodesPopAttributeFlag(void);
// Render a link between attributes.
// The attributes ids used here must match the ids used in Begin(Input|Output)Attribute function
// calls. The order of start_attr and end_attr doesn't make a difference for rendering the link.
CIMGUI_API void ImNodesLink(int id, int start_attribute_id, int end_attribute_id);
// Enable or disable the ability to click and drag a specific node.
CIMGUI_API void ImNodesSetNodeDraggable(int node_id, const bool draggable);
// If ImNodesStyleFlags_GridSnapping is enabled, snap the specified node's origin to the grid.
CIMGUI_API void ImNodesSnapNodeToGrid(int node_id);
// Returns true if the current node editor canvas is being hovered over by the mouse, and is not
// blocked by any other windows.
CIMGUI_API bool ImNodesIsEditorHovered(void);
// The following functions return true if a UI element is being hovered over by the mouse cursor.
// Assigns the id of the UI element being hovered over to the function argument. Use these functions
// after EndNodeEditor() has been called.
CIMGUI_API bool ImNodesIsNodeHovered(int* node_id);
CIMGUI_API bool ImNodesIsLinkHovered(int* link_id);
CIMGUI_API bool ImNodesIsPinHovered(int* attribute_id);
// Use The following two functions to query the number of selected nodes or links in the current
// editor. Use after calling EndNodeEditor().
CIMGUI_API int  ImNodesNumSelectedNodes(void);
CIMGUI_API int  ImNodesNumSelectedLinks(void);
// Get the selected node/link ids. The pointer argument should point to an integer array with at
// least as many elements as the respective NumSelectedNodes/NumSelectedLinks function call
// returned.
CIMGUI_API void ImNodesGetSelectedNodes(int* node_ids);
CIMGUI_API void ImNodesGetSelectedLinks(int* link_ids);
// Use the following functions to add or remove individual nodes or links from the current editors
// selection. Note that all functions require the id to be an existing valid id for this editor.
// Select-functions has the precondition that the object is currently considered unselected.
// Clear-functions has the precondition that the object is currently considered selected.
// Preconditions listed above can be checked via IsNodeSelected/IsLinkSelected if not already
// known.
CIMGUI_API void ImNodesSelectNode(int node_id);
CIMGUI_API bool ImNodesIsNodeSelected(int node_id);
CIMGUI_API void ImNodesSelectLink(int link_id);
CIMGUI_API bool ImNodesIsLinkSelected(int link_id);
// Was the previous attribute active? This will continuously return true while the left mouse button
// is being pressed over the UI content of the attribute.
CIMGUI_API bool ImNodesIsAttributeActive(void);
CIMGUI_API bool ImNodesIsAnyAttributeActiveEx(int* attribute_id /* = NULL */);
// Use the following functions to query a change of state for an existing link, or new link. Call
// these after EndNodeEditor().

// Did the user start dragging a new link from a pin?
CIMGUI_API bool ImNodesIsLinkStarted(int* started_at_attribute_id);
CIMGUI_API bool ImNodesIsLinkDroppedEx(int* started_at_attribute_id /* = NULL */, bool including_detached_links /* = true */);
CIMGUI_API bool ImNodesIsLinkCreatedEx(int* started_at_attribute_id, int* ended_at_attribute_id, bool* created_from_snap /* = NULL */);
CIMGUI_API bool ImNodesIsLinkCreatedIntPtrEx(int* started_at_node_id, int* started_at_attribute_id, int* ended_at_node_id, int* ended_at_attribute_id, bool* created_from_snap /* = NULL */);
// Was an existing link detached from a pin by the user? The detached link's id is assigned to the
// output argument link_id.
CIMGUI_API bool ImNodesIsLinkDestroyed(int* link_id);
CIMGUI_API const char* ImNodesSaveCurrentEditorStateToIniStringEx(size_t* data_size /* = NULL */);
CIMGUI_API const char* ImNodesSaveEditorStateToIniStringEx(const ImNodesEditorContext* editor, size_t* data_size /* = NULL */);
CIMGUI_API void ImNodesLoadCurrentEditorStateFromIniString(const char* data, size_t data_size);
CIMGUI_API void ImNodesLoadEditorStateFromIniString(ImNodesEditorContext* editor, const char* data, size_t data_size);
CIMGUI_API void ImNodesSaveCurrentEditorStateToIniFile(const char* file_name);
CIMGUI_API void ImNodesSaveEditorStateToIniFile(const ImNodesEditorContext* editor, const char* file_name);
CIMGUI_API void ImNodesLoadCurrentEditorStateFromIniFile(const char* file_name);
CIMGUI_API void ImNodesLoadEditorStateFromIniFile(ImNodesEditorContext* editor, const char* file_name);