generated-out/imnodes/dear-imgui-raw-imnodes/cbits/DearImGuiWrappers.h

void ImNodesPushStyleVarImVec2_wrap(ImNodesStyleVar style_item, ImVec2 const* value);
void ImNodesSetNodeEditorSpacePos_wrap(int node_id, ImVec2 const* editor_space_pos);
void ImNodesSetNodeGridSpacePos_wrap(int node_id, ImVec2 const* grid_pos);
void ImNodesSetNodeScreenSpacePos_wrap(int node_id, ImVec2 const* screen_space_pos);