generated-out/imnodes/dear-imgui-raw-imnodes/src/DearImGui/Raw/ImNodes.hsc


-- C: void ImNodes::GetSelectedLinks(int* link_ids)
foreign import capi unsafe "dcimnodes.h ImNodesGetSelectedLinks"
  imNodesGetSelectedLinks :: (Ptr CInt) -> IO ()
-- C: void ImNodes::GetSelectedNodes(int* node_ids)
foreign import capi unsafe "dcimnodes.h ImNodesGetSelectedNodes"
  imNodesGetSelectedNodes :: (Ptr CInt) -> IO ()
-- C: ImNodesStyle* ImNodes::GetStyle()
foreign import capi unsafe "dcimnodes.h ImNodesGetStyle"
  imNodesGetStyle :: IO (Ptr ImNodesStyle)
-- C: bool ImNodes::IsAnyAttributeActive(int* attribute_id)
foreign import capi unsafe "dcimnodes.h ImNodesIsAnyAttributeActiveEx"
  imNodesIsAnyAttributeActiveEx :: (Ptr CInt) -> IO CBool
-- C: bool ImNodes::IsAttributeActive()
foreign import capi unsafe "dcimnodes.h ImNodesIsAttributeActive"
  imNodesIsAttributeActive :: IO CBool
-- C: bool ImNodes::IsEditorHovered()
foreign import capi unsafe "dcimnodes.h ImNodesIsEditorHovered"
  imNodesIsEditorHovered :: IO CBool
-- C: bool ImNodes::IsLinkCreated(int* started_at_attribute_id, int* ended_at_attribute_id, bool* created_from_snap)
foreign import capi unsafe "dcimnodes.h ImNodesIsLinkCreatedEx"
  imNodesIsLinkCreatedEx :: (Ptr CInt) -> (Ptr CInt) -> (Ptr CBool) -> IO CBool
-- C: bool ImNodes::IsLinkCreated(int* started_at_node_id, int* started_at_attribute_id, int* ended_at_node_id, int* ended_at_attribute_id, bool* created_from_snap)
foreign import capi unsafe "dcimnodes.h ImNodesIsLinkCreatedIntPtrEx"
  imNodesIsLinkCreatedIntPtrEx :: (Ptr CInt) -> (Ptr CInt) -> (Ptr CInt) -> (Ptr CInt) -> (Ptr CBool) -> IO CBool
-- C: bool ImNodes::IsLinkDestroyed(int* link_id)
foreign import capi unsafe "dcimnodes.h ImNodesIsLinkDestroyed"
  imNodesIsLinkDestroyed :: (Ptr CInt) -> IO CBool
-- C: bool ImNodes::IsLinkDropped(int* started_at_attribute_id, bool including_detached_links)
foreign import capi unsafe "dcimnodes.h ImNodesIsLinkDroppedEx"
  imNodesIsLinkDroppedEx :: (Ptr CInt) -> CBool -> IO CBool
-- C: bool ImNodes::IsLinkHovered(int* link_id)
foreign import capi unsafe "dcimnodes.h ImNodesIsLinkHovered"
  imNodesIsLinkHovered :: (Ptr CInt) -> IO CBool
-- C: bool ImNodes::IsLinkSelected(int link_id)
foreign import capi unsafe "dcimnodes.h ImNodesIsLinkSelected"
  imNodesIsLinkSelected :: CInt -> IO CBool
-- C: bool ImNodes::IsLinkStarted(int* started_at_attribute_id)
foreign import capi unsafe "dcimnodes.h ImNodesIsLinkStarted"
  imNodesIsLinkStarted :: (Ptr CInt) -> IO CBool
-- C: bool ImNodes::IsNodeHovered(int* node_id)
foreign import capi unsafe "dcimnodes.h ImNodesIsNodeHovered"
  imNodesIsNodeHovered :: (Ptr CInt) -> IO CBool
-- C: bool ImNodes::IsNodeSelected(int node_id)
foreign import capi unsafe "dcimnodes.h ImNodesIsNodeSelected"
  imNodesIsNodeSelected :: CInt -> IO CBool
-- C: bool ImNodes::IsPinHovered(int* attribute_id)
foreign import capi unsafe "dcimnodes.h ImNodesIsPinHovered"
  imNodesIsPinHovered :: (Ptr CInt) -> IO CBool
-- C: void ImNodes::Link(int id, int start_attribute_id, int end_attribute_id)
foreign import capi unsafe "dcimnodes.h ImNodesLink"
  imNodesLink :: CInt -> CInt -> CInt -> IO ()
-- C: void ImNodes::LoadCurrentEditorStateFromIniFile(const char* file_name)
foreign import capi unsafe "dcimnodes.h ImNodesLoadCurrentEditorStateFromIniFile"
  imNodesLoadCurrentEditorStateFromIniFile :: CString -> IO ()
-- C: void ImNodes::LoadCurrentEditorStateFromIniString(const char* data, size_t data_size)
foreign import capi unsafe "dcimnodes.h ImNodesLoadCurrentEditorStateFromIniString"
  imNodesLoadCurrentEditorStateFromIniString :: CString -> CSize -> IO ()
-- C: void ImNodes::LoadEditorStateFromIniFile(ImNodesEditorContext* editor, const char* file_name)
foreign import capi unsafe "dcimnodes.h ImNodesLoadEditorStateFromIniFile"
  imNodesLoadEditorStateFromIniFile :: (Ptr ImNodesEditorContext) -> CString -> IO ()
-- C: void ImNodes::LoadEditorStateFromIniString(ImNodesEditorContext* editor, const char* data, size_t data_size)
foreign import capi unsafe "dcimnodes.h ImNodesLoadEditorStateFromIniString"
  imNodesLoadEditorStateFromIniString :: (Ptr ImNodesEditorContext) -> CString -> CSize -> IO ()
-- C: void ImNodes::MiniMap(const float minimap_size_fraction, const ImNodesMiniMapLocation location, const ImNodesMiniMapNodeHoveringCallback node_hovering_callback, const ImNodesMiniMapNodeHoveringCallbackUserData node_hovering_callback_data)
foreign import capi unsafe "dcimnodes.h ImNodesMiniMapEx"
  imNodesMiniMapEx :: CFloat -> ImNodesMiniMapLocation -> ImNodesMiniMapNodeHoveringCallback -> ImNodesMiniMapNodeHoveringCallbackUserData -> IO ()
-- C: int ImNodes::NumSelectedLinks()
foreign import capi unsafe "dcimnodes.h ImNodesNumSelectedLinks"
  imNodesNumSelectedLinks :: IO CInt
-- C: int ImNodes::NumSelectedNodes()
foreign import capi unsafe "dcimnodes.h ImNodesNumSelectedNodes"
  imNodesNumSelectedNodes :: IO CInt
-- C: void ImNodes::PopAttributeFlag()
foreign import capi unsafe "dcimnodes.h ImNodesPopAttributeFlag"
  imNodesPopAttributeFlag :: IO ()
-- C: void ImNodes::PopColorStyle()
foreign import capi unsafe "dcimnodes.h ImNodesPopColorStyle"
  imNodesPopColorStyle :: IO ()
-- C: void ImNodes::PopStyleVar(int count)
foreign import capi unsafe "dcimnodes.h ImNodesPopStyleVarEx"
  imNodesPopStyleVarEx :: CInt -> IO ()
-- C: void ImNodes::PushAttributeFlag(ImNodesAttributeFlags flag)
foreign import capi unsafe "dcimnodes.h ImNodesPushAttributeFlag"
  imNodesPushAttributeFlag :: ImNodesAttributeFlags -> IO ()
-- C: void ImNodes::PushColorStyle(ImNodesCol item, unsigned int color)
foreign import capi unsafe "dcimnodes.h ImNodesPushColorStyle"
  imNodesPushColorStyle :: ImNodesCol -> CUInt -> IO ()
-- C: void ImNodes::PushStyleVar(ImNodesStyleVar style_item, float value)
foreign import capi unsafe "dcimnodes.h ImNodesPushStyleVar"
  imNodesPushStyleVar :: ImNodesStyleVar -> CFloat -> IO ()
foreign import capi unsafe "DearImGuiWrappers.h ImNodesPushStyleVarImVec2_wrap"
  c_imNodesPushStyleVarImVec2 :: ImNodesStyleVar -> (Ptr ImVec2) -> IO ()

imNodesPushStyleVarImVec2 :: ImNodesStyleVar -> ImVec2 -> IO ()
imNodesPushStyleVarImVec2 style_item value =
  with value $ \_p1 -> c_imNodesPushStyleVarImVec2 style_item _p1

-- C: void ImNodes::SaveCurrentEditorStateToIniFile(const char* file_name)
foreign import capi unsafe "dcimnodes.h ImNodesSaveCurrentEditorStateToIniFile"
  imNodesSaveCurrentEditorStateToIniFile :: CString -> IO ()
-- C: const char* ImNodes::SaveCurrentEditorStateToIniString(size_t* data_size)
foreign import capi unsafe "dcimnodes.h ImNodesSaveCurrentEditorStateToIniStringEx"
  imNodesSaveCurrentEditorStateToIniStringEx :: (Ptr CSize) -> IO CString
-- C: void ImNodes::SaveEditorStateToIniFile(const ImNodesEditorContext* editor, const char* file_name)
foreign import capi unsafe "dcimnodes.h ImNodesSaveEditorStateToIniFile"
  imNodesSaveEditorStateToIniFile :: (Ptr ImNodesEditorContext) -> CString -> IO ()
-- C: const char* ImNodes::SaveEditorStateToIniString(const ImNodesEditorContext* editor, size_t* data_size)
foreign import capi unsafe "dcimnodes.h ImNodesSaveEditorStateToIniStringEx"
  imNodesSaveEditorStateToIniStringEx :: (Ptr ImNodesEditorContext) -> (Ptr CSize) -> IO CString
-- C: void ImNodes::SelectLink(int link_id)
foreign import capi unsafe "dcimnodes.h ImNodesSelectLink"
  imNodesSelectLink :: CInt -> IO ()
-- C: void ImNodes::SelectNode(int node_id)
foreign import capi unsafe "dcimnodes.h ImNodesSelectNode"
  imNodesSelectNode :: CInt -> IO ()
-- C: void ImNodes::SetCurrentContext(ImNodesContext* ctx)
foreign import capi unsafe "dcimnodes.h ImNodesSetCurrentContext"
  imNodesSetCurrentContext :: (Ptr ImNodesContext) -> IO ()
-- C: void ImNodes::SetImGuiContext(ImGuiContext* ctx)
foreign import capi unsafe "dcimnodes.h ImNodesSetImGuiContext"
  imNodesSetImGuiContext :: (Ptr ImGuiContext) -> IO ()
-- C: void ImNodes::SetNodeDraggable(int node_id, const bool draggable)
foreign import capi unsafe "dcimnodes.h ImNodesSetNodeDraggable"
  imNodesSetNodeDraggable :: CInt -> CBool -> IO ()
foreign import capi unsafe "DearImGuiWrappers.h ImNodesSetNodeEditorSpacePos_wrap"
  c_imNodesSetNodeEditorSpacePos :: CInt -> (Ptr ImVec2) -> IO ()

imNodesSetNodeEditorSpacePos :: CInt -> ImVec2 -> IO ()
imNodesSetNodeEditorSpacePos node_id editor_space_pos =
  with editor_space_pos $ \_p1 -> c_imNodesSetNodeEditorSpacePos node_id _p1

foreign import capi unsafe "DearImGuiWrappers.h ImNodesSetNodeGridSpacePos_wrap"
  c_imNodesSetNodeGridSpacePos :: CInt -> (Ptr ImVec2) -> IO ()

imNodesSetNodeGridSpacePos :: CInt -> ImVec2 -> IO ()
imNodesSetNodeGridSpacePos node_id grid_pos =
  with grid_pos $ \_p1 -> c_imNodesSetNodeGridSpacePos node_id _p1

foreign import capi unsafe "DearImGuiWrappers.h ImNodesSetNodeScreenSpacePos_wrap"
  c_imNodesSetNodeScreenSpacePos :: CInt -> (Ptr ImVec2) -> IO ()

imNodesSetNodeScreenSpacePos :: CInt -> ImVec2 -> IO ()
imNodesSetNodeScreenSpacePos node_id screen_space_pos =
  with screen_space_pos $ \_p1 -> c_imNodesSetNodeScreenSpacePos node_id _p1

-- C: void ImNodes::SnapNodeToGrid(int node_id)
foreign import capi unsafe "dcimnodes.h ImNodesSnapNodeToGrid"
  imNodesSnapNodeToGrid :: CInt -> IO ()
-- C: void ImNodes::StyleColorsClassic(ImNodesStyle* dest)
foreign import capi unsafe "dcimnodes.h ImNodesStyleColorsClassicEx"
  imNodesStyleColorsClassicEx :: (Ptr ImNodesStyle) -> IO ()
-- C: void ImNodes::StyleColorsDark(ImNodesStyle* dest)
foreign import capi unsafe "dcimnodes.h ImNodesStyleColorsDarkEx"
  imNodesStyleColorsDarkEx :: (Ptr ImNodesStyle) -> IO ()
-- C: void ImNodes::StyleColorsLight(ImNodesStyle* dest)
foreign import capi unsafe "dcimnodes.h ImNodesStyleColorsLightEx"
  imNodesStyleColorsLightEx :: (Ptr ImNodesStyle) -> IO ()
